# mcp-agents

./: .gitignore  README.md  ecret from config files  etl_tools_log.txt  example-env.env  github-mcp-repo.txt  mcp_agent.py  mcp_config-example.json  mcp_config.json  pyproject.toml  requirements.txt  streamlit_app.py
app/: agent.py  client.py  config.py  mcp_client.py  mcp_server.py  mcp_tool.py  multi_mcp_app.py  server.py  server_cli.py  single_mcp_app.py
basic/: basic_mcp_agent.py
cli/: server_cli.py
client/: client.py
data/: products.csv
data/findings/: products_findings.txt
db/: chroma.sqlite3
llm/: llms.py
memory_store/2a8613c8-a48e-4a7f-9b42-5203dedb84ee/: chroma.sqlite3
my_mcp/: etl_agent.py  etl_app.py  etl_mcp_server.py  test.py
project/: app.py  mcp_server.py
server/: filesystem_server.py  server_cli.py  supabase_server.py
src/: brave_mcp_server.py  context7_mcp_server.py  docker_mcp_server.py  github_mcp_server.py  scraper_mcp_server.py  scraper_tool.py  selenium_mcp_server.py  single_app.py  supabase_mcp_server.py  test.py  yfinance_mcp_server.py
tools/: mcp_tool.py
travel_mcp_agent/: README.md  app.py  mcp_server.py  schemas.py
