[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=0.114.0",
    "langchain-openai>=0.2.14",
    "mcp[cli]>=1.6.0",
    "mcpadapt[crewai]>=0.1.4",
    "openai>=1.76.0",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "setuptools>=79.0.1",
    "streamlit>=1.44.1",
    "ipykernel>=6.29.5",
    "crewai-tools[mcp]>=0.40.1",
    "mcp>=1.6.0",
]
