[project]
name = "mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai-tools[mcp]",
    "crewai",
    "fastmcp",
    "mcpadapt",
    "python-dotenv",
    "setuptools",
    "streamlit",
    "langchain-openai",
    "mcp[cli]",
    "nest-asyncio",
]
